vcluster01/namespaces/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acm-gke-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "ajinkyagasm.searceinc.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
